# hl_navigation

./: .gitignore  .gitmodules  CMakeLists.txt.disable  Dockerfile  README.md  docker-compose.yml  install_linux.md  refactoring_07_02_2023.txt
hl_navigation/: CMakeLists.txt  README.md  package.xml
hl_navigation/cfg/: Navigation.cfg
hl_navigation/hl_navigation/: __init__.py
hl_navigation/include/: Agent.h  Controller.h  Dummy.h  HLAgent.h  HRVOAgent.h  ORCAAgent.h  behavior.h  common.h
hl_navigation/include/argos2/common/utility/: string_utilities.h
hl_navigation/include/behaviors/: HL.h  HRVO.h  ORCA.h  dummy.h
hl_navigation/include/hl_navigation/: behavior.h  cached_collision_computation.h  collision_computation.h  common.h  controller.h  controller_3d.h  kinematic.h  kinematics.h  plugins.h  property.h  register.h  social_margin.h  state.h  target.h  utilities.h
hl_navigation/include/hl_navigation/behaviors/: HL.h  HRVO.h  ORCA.h  dummy.h
hl_navigation/include/hl_navigation/state/: geometric.h
hl_navigation/include/hl_navigation/states/: geometric.h
hl_navigation/include/hl_navigation/yaml/: core.h  property.h  register.h  yaml.h
hl_navigation/launch/: navigation.launch
hl_navigation/src/: Agent.cpp  Agent.h  Controller.cpp  Controller.h  Drawing.hpp  Dummy.cpp  HLAgent.cpp  HLAgent.h  HRVOAgent.cpp  HRVOAgent.h  Navigator.cpp  Navigator.h  ORCAAgent.cpp  ORCAAgent.h  ROSControllerNode.cpp  behavior.cpp  benchmark.cpp  cached_collision_computation.cpp  collision_computation.cpp  common.h  controller.cpp  controller_3d.cpp  drawing.cpp  kinematics.cpp  list.cpp  navigationNode.cpp  python.cpp  test_behavior.cpp  test_controller.cpp  test_controller_3d.cpp  test_controller_async.cpp
hl_navigation/src/argos2/common/utility/: string_utilities.h
hl_navigation/src/behaviors/: HL.cpp  dummy.cpp
hl_navigation/src/behaviors/HRVO/: HRVO.cpp
hl_navigation/src/behaviors/ORCA/: ORCA.cpp
hl_navigation/test/: test_behavior.py  test_controller.py
hl_navigation_coppeliasim/: CMakeLists.txt  package.xml
hl_navigation_coppeliasim/lua/: callbacks.xml  simHLNavigation.lua
hl_navigation_coppeliasim/src/: plugin.cpp
hl_navigation_demos/: CMakeLists.txt  README.md  package.xml  setup.cfg
hl_navigation_demos/hl_navigation_demos/: enki.py  native.py  ros.py  sim.py
hl_navigation_demos/launch/: sim.launch  sim.yaml  sim_py.yaml  sim_standalone.yaml  simulation.launch  thymio.launch
hl_navigation_demos/script/: enki  native  ros
hl_navigation_demos/src/: native.cpp  scenario.h  sim.cpp
hl_navigation_examples/: CMakeLists.txt  package.xml
hl_navigation_examples/src/: groups.h
hl_navigation_examples/src/behavior/: CMakeLists.txt  behavior.cpp  benchmark.cpp  echo_yaml.cpp  my_behavior.h
hl_navigation_examples/src/collision/: CMakeLists.txt  cached_collision.cpp  collision.cpp
hl_navigation_examples/src/controller/: CMakeLists.txt  controller.cpp  controller_3d.cpp  controller_async.cpp
hl_navigation_examples/src/scenario/: CMakeLists.txt  my_scenario.h  scenario_from_yaml.cpp  scenario_registered.cpp  scenario_with_group.cpp
hl_navigation_examples/src/world/: CMakeLists.txt  world.cpp  world_from_yaml.cpp  world_with_group.cpp
hl_navigation_py/: CMakeLists.txt  package.xml  setup.cfg
hl_navigation_py/hl_navigation/: __init__.py  __init__.pyi  list.py
hl_navigation_py/hl_navigation/behaviors/: dummy.py  social_force.py
hl_navigation_py/hl_navigation/core/: __init__.py  list.py
hl_navigation_py/hl_navigation/core/behaviors/: __init__.py  dummy.py  social_force.py
hl_navigation_py/hl_navigation/kinematics/: __init__.py
hl_navigation_py/include/hl_navigation_py/: register.h  yaml.h
hl_navigation_py/src/: _hl_navigation.cpp  python.cpp
hl_navigation_py/test/: test_behavior.py  test_controller.py  test_cross.py  test_multi_enki.py
hl_navigation_sim/: CMakeLists.txt  TODO.md  package.xml  setup.cfg
hl_navigation_sim/hl_navigation/sim/: __init__.py  list.py  recording.py  run.py  sample.py
hl_navigation_sim/hl_navigation/sim/ui/: web_ui.py
hl_navigation_sim/hl_navigation_sim/: __init__.py  list.py  recording.py  replay.py  run.py  run_rt.py  sample.py
hl_navigation_sim/hl_navigation_sim/scenarios/: __init__.py
hl_navigation_sim/hl_navigation_sim/state_estimations/: __init__.py
hl_navigation_sim/hl_navigation_sim/tasks/: __init__.py
hl_navigation_sim/hl_navigation_sim/ui/: web_ui.py
hl_navigation_sim/hl_navigation_sim/ui/templates/: world.html  world.js
hl_navigation_sim/include/: simulation.h
hl_navigation_sim/include/hl_navigation/sim/: agent.h  entity.h  experiment.h  scenario.h  state_estimation.h  task.h  world.h
hl_navigation_sim/include/hl_navigation/sim/sampling/: agent.h  register.h  sampler.h
hl_navigation_sim/include/hl_navigation/sim/scenarios/: antipodal.h  collisions.h  corridor.h  cross.h  cross_torus.h  simple.h
hl_navigation_sim/include/hl_navigation/sim/state_estimations/: geometric_bounded.h
hl_navigation_sim/include/hl_navigation_sim/: agent.h  entity.h  experiment.h  scenario.h  simulation.h  state_estimation.h  task.h  world.h
hl_navigation_sim/include/hl_navigation_sim/sampling/: agent.h  register.h  sampler.h
hl_navigation_sim/include/hl_navigation_sim/scenarios/: antipodal.h  collisions.h  corridor.h  cross.h  cross_torus.h  simple.h  simple_with_init.h
hl_navigation_sim/include/hl_navigation_sim/state_estimations/: geometric_bounded.h
hl_navigation_sim/include/hl_navigation_sim/tasks/: waypoints.h
hl_navigation_sim/include/hl_navigation_sim/yaml/: basic.h  experiment.h  property.h  sampling.h  scenario.h  world.h
hl_navigation_sim/src/: agent.cpp  collisions.h  cross.cpp  cross.h  docstrings.h  experiment.cpp  list.cpp  main.cpp  python.cpp  run.cpp  sample.cpp  scenario.cpp  simulation.cpp  world.cpp
hl_navigation_sim/src/sampling/: sampler.cpp
hl_navigation_sim/src/scenarios/: antipodal.cpp  collisions.cpp  corridor.cpp  cross.cpp  cross_torus.cpp
hl_navigation_sim/src/state_estimations/: geometric_bounded.cpp
hl_navigation_sim/src/tasks/: waypoints.cpp
(+241 files in other folders)
