[develop]
script_dir=$base/lib/hl_navigation_demo
[install]
install_scripts=$base/lib/hl_navigation_demo
[options.entry_points]
console_scripts =
    enki = hl_navigation_demos.enki:main
    native_py = hl_navigation_demos.native:main
    ros = hl_navigation_demos.ros:main
    sim_py = hl_navigation_demos.sim:main
hl_scenarios = 
    thymio_demo = hl_navigation_demos.sim:ThymioDemo


