<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hl_navigation_sim</name>
  <version>0.0.0</version>
  <description>
    The hl navigation simulation
  </description>
  <maintainer email="jerome@idsia.ch">Jérôme Guzzi</maintainer>
  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
